fix scrolling issue on mobile;

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,7 @@ html,
 body,
 #root {
   background-color: rgba(0, 0, 0, 0.95);
+  overflow: hidden;
 }
 
 img {
